build(package): simplify repository fields
created using @octoherd and https://github.com/gr2m/octoherd-script-normalize-package-repository-field

--- a/package.json
+++ b/package.json
@@ -14,5 +14,6 @@
   ],
   "scripts": {
     "start": "node node_modules/hoodie-server/bin/start"
-  }
+  },
+  "repository": "github:gr2m/hoodiepluginshow"
 }
